--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <script src="index.js"></script>
   <footer>
-    Made by Pau Morillas.
+    Pulsa en uno de los tambores para poder tocar usando el teclado
   </footer>
 </body>
 
